[gd_scene load_steps=18 format=1]

[ext_resource path="res://Scripts/Tela.gd" type="Script" id=1]
[ext_resource path="res://Texturas/full-background.png" type="Texture" id=2]
[ext_resource path="res://Scripts/playerBehaivour.gd" type="Script" id=3]
[ext_resource path="res://Texturas/player/spr_ratrun_strip4_aqua_1.png" type="Texture" id=4]
[ext_resource path="res://Texturas/player/spr_ratrun_strip4_aqua_0.png" type="Texture" id=5]
[ext_resource path="res://Texturas/player/spr_ratrun_strip4_aqua_2.png" type="Texture" id=6]
[ext_resource path="res://Fontes/montserrat/Montserrat-Bold.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://Sons/new_samplelibrary_BG.tres" type="SampleLibrary" id=8]
[ext_resource path="res://Sons/new_samplelibrary.tres" type="SampleLibrary" id=9]

[sub_resource type="CircleShape2D" id=1]

custom_solver_bias = 0.0
radius = 26.5

[sub_resource type="SpriteFrames" id=2]

animations = [ {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ), ExtResource( 4 ), ExtResource( 6 ) ],
"loop": true,
"name": "Walk",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=3]

custom_solver_bias = 0.0
extents = Vector2( 10, 100 )

[sub_resource type="DynamicFont" id=4]

font/size = 32
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 7 )

[sub_resource type="StyleBoxFlat" id=5]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
bg_color = Color( 0.263296, 0.96875, 0.0378418, 1 )
light_color = Color( 0.8, 0.8, 0.8, 1 )
dark_color = Color( 0.8, 0.8, 0.8, 1 )
border_size = 0
border_blend = true
draw_bg = true

[sub_resource type="StyleBoxFlat" id=6]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
bg_color = Color( 0.941406, 0.0551605, 0.0551605, 1 )
light_color = Color( 0.8, 0.8, 0.8, 1 )
dark_color = Color( 0.8, 0.8, 0.8, 1 )
border_size = 0
border_blend = true
draw_bg = true

[sub_resource type="DynamicFont" id=7]

font/size = 32
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 7 )

[sub_resource type="DynamicFont" id=8]

font/size = 16
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 7 )

[node name="Tela" type="Node"]

script/script = ExtResource( 1 )

[node name="Fundo" type="TextureFrame" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 640.0
margin/bottom = 480.0
texture = ExtResource( 2 )
stretch_mode = 0

[node name="Player" type="KinematicBody2D" parent="."]

editor/display_folded = true
transform/pos = Vector2( 322.813, 383.728 )
input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
collision/margin = 0.08
script/script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="animacao" type="AnimatedSprite" parent="Player"]

frames = SubResource( 2 )
animation = "Idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]

shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="ParedeDir" type="StaticBody2D" parent="."]

editor/display_folded = true
input/pickable = false
shapes/0/shape = SubResource( 3 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 649.837, 356.289 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="ParedeDir"]

transform/pos = Vector2( 649.837, 356.289 )
shape = SubResource( 3 )
trigger = false
_update_shape_index = 0
__meta__ = {
"_edit_group_": true
}

[node name="ParedeEsq" type="StaticBody2D" parent="."]

editor/display_folded = true
input/pickable = false
shapes/0/shape = SubResource( 3 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, -9.66703, 342.22 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="ParedeEsq"]

transform/pos = Vector2( -9.66703, 342.22 )
shape = SubResource( 3 )
trigger = false
_update_shape_index = 0
__meta__ = {
"_edit_group_": true
}

[node name="BombaTimer" type="Timer" parent="."]

process_mode = 1
wait_time = 2.0
one_shot = false
autostart = true

[node name="MoedaTimer" type="Timer" parent="."]

process_mode = 1
wait_time = 3.0
one_shot = false
autostart = true

[node name="QueijoTimer" type="Timer" parent="."]

process_mode = 1
wait_time = 8.0
one_shot = false
autostart = true

[node name="Pontos" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 410.0
margin/top = 30.0
margin/right = 605.0
margin/bottom = 70.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0, 0.25, 1, 1 )
text = "0"
align = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Vida" type="ProgressBar" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 20.0
margin/top = 40.0
margin/right = 260.0
margin/bottom = 70.0
custom_styles/fg = SubResource( 5 )
custom_styles/bg = SubResource( 6 )
range/min = 0.0
range/max = 100.0
range/step = 1.0
range/page = 0.0
range/value = 100.0
range/exp_edit = false
range/rounded = true
percent/visible = false

[node name="BG" type="SamplePlayer2D" parent="."]

params/volume_db = 0.0
params/pitch_scale = 1.0
params/attenuation/min_distance = 1.0
params/attenuation/max_distance = 2048.0
params/attenuation/distance_exp = 1.0
config/polyphony = 1
config/samples = ExtResource( 8 )
config/pitch_random = 0.0

[node name="SamplePlayer2D" type="SamplePlayer2D" parent="."]

params/volume_db = 0.0
params/pitch_scale = 1.0
params/attenuation/min_distance = 1.0
params/attenuation/max_distance = 2048.0
params/attenuation/distance_exp = 1.0
config/polyphony = 1
config/samples = ExtResource( 9 )
config/pitch_random = 0.0

[node name="FimPop" type="PopupPanel" parent="."]

process/pause_mode = 2
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 400.0
margin/bottom = 210.0
popup/exclusive = false
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="FimPop"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 400.0
margin/bottom = 110.0
custom_fonts/font = SubResource( 7 )
text = "GAME OVER"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Restart" type="Button" parent="FimPop"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 130.0
margin/top = 120.0
margin/right = 260.0
margin/bottom = 160.0
custom_fonts/font = SubResource( 8 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Restart"
flat = false

[connection signal="timeout" from="BombaTimer" to="." method="_on_BombaTimer_timeout"]

[connection signal="timeout" from="MoedaTimer" to="." method="_on_MoedaTimer_timeout"]

[connection signal="timeout" from="QueijoTimer" to="." method="_on_QueijoTimer_timeout"]

[connection signal="pressed" from="FimPop/Restart" to="." method="_on_Restart_pressed"]


